--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -232,13 +232,16 @@
     <Content Include="bin\roslyn\Microsoft.CodeAnalysis.VisualBasic.dll" />
     <Content Include="bin\roslyn\Microsoft.DiaSymReader.Native.amd64.dll" />
     <Content Include="bin\roslyn\Microsoft.DiaSymReader.Native.x86.dll" />
+    <Content Include="bin\roslyn\Microsoft.Win32.Primitives.dll" />
     <Content Include="bin\roslyn\System.AppContext.dll" />
     <Content Include="bin\roslyn\System.Collections.Immutable.dll" />
     <Content Include="bin\roslyn\System.Console.dll" />
     <Content Include="bin\roslyn\System.Diagnostics.FileVersionInfo.dll" />
+    <Content Include="bin\roslyn\System.Diagnostics.Process.dll" />
     <Content Include="bin\roslyn\System.Diagnostics.StackTrace.dll" />
     <Content Include="bin\roslyn\System.IO.Compression.dll" />
     <Content Include="bin\roslyn\System.IO.FileSystem.dll" />
+    <Content Include="bin\roslyn\System.IO.FileSystem.DriveInfo.dll" />
     <Content Include="bin\roslyn\System.IO.FileSystem.Primitives.dll" />
     <Content Include="bin\roslyn\System.IO.Pipes.AccessControl.dll" />
     <Content Include="bin\roslyn\System.IO.Pipes.dll" />
@@ -251,6 +254,7 @@
     <Content Include="bin\roslyn\System.Security.Cryptography.X509Certificates.dll" />
     <Content Include="bin\roslyn\System.Security.Principal.Windows.dll" />
     <Content Include="bin\roslyn\System.Text.Encoding.CodePages.dll" />
+    <Content Include="bin\roslyn\System.Threading.Thread.dll" />
     <Content Include="bin\roslyn\System.ValueTuple.dll" />
     <Content Include="bin\roslyn\System.Xml.ReaderWriter.dll" />
     <Content Include="bin\roslyn\System.Xml.XmlDocument.dll" />
@@ -1074,6 +1078,7 @@
     <Content Include=".vs\WhiteBears\v15\Server\sqlite3\storage.ide" />
     <Content Include=".vs\WhiteBears\v15\Server\sqlite3\storage.ide-shm" />
     <Content Include=".vs\WhiteBears\v15\Server\sqlite3\storage.ide-wal" />
+    <Content Include="packages\bootstrap.3.3.7\.signature.p7s" />
     <None Include="packages\jQuery.3.3.1\Content\Scripts\jquery-3.3.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.3.1\Content\Scripts\jquery-3.3.1.js" />
     <Content Include="packages\jQuery.3.3.1\Content\Scripts\jquery-3.3.1.min.js" />
@@ -1211,7 +1216,6 @@
     <Content Include="packages\System.Diagnostics.DiagnosticSource.4.4.1\version.txt" />
     <Content Include="packages\WebGrease.1.6.0\lib\WebGrease.dll" />
     <Content Include="packages\WebGrease.1.6.0\tools\WG.EXE" />
-    <Content Include="Properties\PublishProfiles\AdvancedSettings.pubxml.user" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -1273,7 +1277,6 @@
     <Content Include="obj\Debug\WhiteBears.csproj.CopyComplete" />
     <Content Include="obj\Debug\WhiteBears.csproj.CoreCompileInputs.cache" />
     <Content Include="obj\Debug\WhiteBears.csprojAssemblyReference.cache" />
-    <Content Include="obj\Debug\WhiteBears.csprojResolveAssemblyReference.cache" />
     <Content Include="packages\angularjs.1.7.2\angularjs.1.7.2.nupkg" />
     <Content Include="packages\angularjs.1.7.2\content\Scripts\angular-animate.min.js.map" />
     <Content Include="packages\angularjs.1.7.2\content\Scripts\angular-aria.min.js.map" />
@@ -1389,7 +1392,6 @@
     <Content Include="packages\System.Diagnostics.DiagnosticSource.4.4.1\ref\netcoreapp2.0\_._" />
     <Content Include="packages\System.Diagnostics.DiagnosticSource.4.4.1\System.Diagnostics.DiagnosticSource.4.4.1.nupkg" />
     <Content Include="packages\WebGrease.1.6.0\WebGrease.1.6.0.nupkg" />
-    <None Include="Properties\PublishProfiles\AdvancedSettings.pubxml" />
     <None Include="Properties\PublishProfiles\WhiteBears - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\WhiteBears - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
